--- a/src/templates/index.jade
+++ b/src/templates/index.jade
@@ -1,41 +1,6 @@
-doctype html
-html(lang="en")
-    head
-        title Landing Page
-    
-    body#page-top
-        nav#mainNav.navbar.navbar-default.navbar-fixed-top
-          .container-fluid
-            // Brand and toggle get grouped for better mobile display
-            .navbar-header
-              button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#bs-example-navbar-collapse-1')
-                span.sr-only Toggle navigation
-                |                     
-                span.icon-bar
-                |                     
-                span.icon-bar
-                |                     
-                span.icon-bar
-              |                 
-              a.navbar-brand.page-scroll(href='/') FitLog.io
-            // Collect the nav links, forms, and other content for toggling
-            #bs-example-navbar-collapse-1.collapse.navbar-collapse
-              ul.nav.navbar-nav.navbar-right
-                li
-                    a(href='/blog') Blog
-                li
-                    a.page-scroll(href='#about') About
-                                     
-                li
-                    a.page-scroll(href='#services') Services
-                |                     
-                li
-                    a.page-scroll(href='#portfolio') Portfolio
-                |                     
-                li
-                    a.page-scroll(href='#contact') Contact
-                // /.navbar-collapse
-                // /.container-fluid     
+extends ./layout.jade
+block content
+
         header
           .header-content
             .header-content-inner
@@ -47,8 +12,8 @@ html(lang="en")
                 | FitLog allows you to easily log and track workouts.  Analyze your results and progress. Push yourself to be the best you can be, while you maximize your recovery.
               |                 
               a.btn.btn-primary.btn-xl.page-scroll(href='#about') Sign up now!
-        |     
-        section#about.bg-primary
+              |     
+              section#about.bg-primary
           .container
             .row
               .col-lg-8.col-lg-offset-2.text-center
@@ -60,8 +25,8 @@ html(lang="en")
                   | Labore XOXO kogi, laborum tousled assumenda sriracha before they sold out. Labore mlkshk Helvetica Marfa health goth Austin magna sunt, yr aesthetic artisan heirloom chillwave commodo lo-fi.
                 |                     
                 a.btn.btn-default.btn-xl(href='#') Get Started!
-        |     
-        section#services
+              |     
+              section#services
           .container
             .row
               .col-lg-12.text-center
@@ -102,15 +67,15 @@ html(lang="en")
                   h3 Safe and Secure
                   |                         
                   p.text-muted We protect your data with the utmost integrity.  Your privacy is our priority.
-        |     
-        aside.bg-dark
+              |     
+              aside.bg-dark
           .container.text-center
             .call-to-action
               h2 Meet athletes like you!
               |                 
               a.btn.btn-default.btn-xl.wow.tada(href='#') Start your free trial!
-        | 
-        section#portfolio.no-padding
+              | 
+              section#portfolio.no-padding
           .container-fluid
             .row.no-gutter
               .col-lg-4.col-sm-6
@@ -184,8 +149,8 @@ html(lang="en")
                       |                                 
                       .project-name
                         | Fit Fittington
-        |         
-        section#contact
+              |         
+              section#contact
           .container
             .row
               .col-lg-8.col-lg-offset-2.text-center
