--- a/src/templates/index.jade
+++ b/src/templates/index.jade
@@ -1,6 +1,6 @@
 extends ./layout.jade
-block content
 
+block content
         header
           .header-content
             .header-content-inner
@@ -12,8 +12,8 @@ block content
                 | FitLog allows you to easily log and track workouts.  Analyze your results and progress. Push yourself to be the best you can be, while you maximize your recovery.
               |                 
               a.btn.btn-primary.btn-xl.page-scroll(href='#about') Sign up now!
-              |     
-              section#about.bg-primary
+        |     
+        section#about.bg-primary
           .container
             .row
               .col-lg-8.col-lg-offset-2.text-center
@@ -25,8 +25,8 @@ block content
                   | Labore XOXO kogi, laborum tousled assumenda sriracha before they sold out. Labore mlkshk Helvetica Marfa health goth Austin magna sunt, yr aesthetic artisan heirloom chillwave commodo lo-fi.
                 |                     
                 a.btn.btn-default.btn-xl(href='#') Get Started!
-              |     
-              section#services
+        |     
+        section#services
           .container
             .row
               .col-lg-12.text-center
@@ -67,15 +67,15 @@ block content
                   h3 Safe and Secure
                   |                         
                   p.text-muted We protect your data with the utmost integrity.  Your privacy is our priority.
-              |     
-              aside.bg-dark
+        |     
+        aside.bg-dark
           .container.text-center
             .call-to-action
               h2 Meet athletes like you!
               |                 
               a.btn.btn-default.btn-xl.wow.tada(href='#') Start your free trial!
-              | 
-              section#portfolio.no-padding
+        | 
+        section#portfolio.no-padding
           .container-fluid
             .row.no-gutter
               .col-lg-4.col-sm-6
@@ -149,8 +149,8 @@ block content
                       |                                 
                       .project-name
                         | Fit Fittington
-              |         
-              section#contact
+        |         
+        section#contact
           .container
             .row
               .col-lg-8.col-lg-offset-2.text-center
@@ -159,7 +159,7 @@ block content
                 hr.primary
                 |                     
                 p
-                  | At Changzhou Panda, we love to show you how realistic projects are built.  There's a lot going on here, but you'll be ready to roll after this course.
+                  | At Treehouse, we love to show you how realistic projects are built.  There's a lot going on here, but you'll be ready to roll after this course.
               |                 
               .col-lg-4.col-lg-offset-2.text-center
                 i.fa.fa-phone.fa-3x.wow.bounceIn
@@ -170,4 +170,4 @@ block content
                 i.fa.fa-envelope-o.fa-3x.wow.bounceIn(data-wow-delay='.1s')
                 |                     
                 p
-                  a(href='mailto:czie.alexmak@gmail.com') Email your teacher!
+                  a(href='mailto:huston@teamtreehouse.com') Email your teacher!
