--- a/src/templates/layout.jade
+++ b/src/templates/layout.jade
@@ -6,3 +6,9 @@ html(lang="en")
     body#page-top
       include ./partials/_nav.jade
       block content
+        script(src='/static/js/jquery.js')
+        script(src='/static/js/bootstrap.mins.js')
+        script(src='/static/js/jquery.easing.min.js')
+        script(src='/static/js/jquery.fittext.js')
+        script(src='/static/js/wow.min.js')
+        script(src='/static/js/creative.js')
