--- a/src/templates/partials/_head.jade
+++ b/src/templates/partials/_head.jade
@@ -2,4 +2,7 @@ head
 	title Landing Page
 	link(rel='stylesheet',href='/static/css/bootstrap.css',type='text/css')
 	link(rel='stylesheet',href='/static/css/creative.css',type='text/css')
+	link(rel='stylesheet',href='/static/font-awesome/css/font-awesome.css',type='text/css')
+	link(rel='stylesheet',href='/static/font-awesome/css/font-awesome.min.css',type='text/css')
+	link(rel='stylesheet',href='/static/css/creative.css',type='text/css')
 	//all static goes here
